# petgraph-graphml

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/: dependabot.yml
.github/workflows/: audit.yaml  ci.yaml  publish-crates-io.yaml
src/: lib.rs
tests/: graphml.rs  version_numbers.rs
