[package]
name = "petgraph-graphml"
version = "2.0.1"
authors = ["jonasbb"]

description = "GraphML output support for petgraph"
documentation = "https://docs.rs/petgraph-graphml/"
repository = "https://github.com/jonasbb/petgraph-graphml"
readme = "README.md"
keywords = ["graphml", "petgraph"]
license = "MIT OR Apache-2.0"
edition = "2018"

exclude = [
    ".github",
    ".gitignore",
    "bors.toml",
    "README.tpl",
    "rustfmt.toml",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
petgraph = "0.5.0"
xml-rs = "0.8.0"

[dev-dependencies]
version-sync = "0.8.1"
