[package]
authors = ["Jonas Bushart"]
name = "petgraph-graphml"
version = "3.0.0"

description = "GraphML output support for petgraph"
documentation = "https://docs.rs/petgraph-graphml/"
edition = "2018"
keywords = ["graphml", "petgraph"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jonasbb/petgraph-graphml"

include = ["src/**/*", "LICENSE-*", "README.*", "CHANGELOG.md"]

[badges]
maintenance = {status = "passively-maintained"}

[dependencies]
petgraph = "0.6.0"
xml-rs = "0.8.0"

[dev-dependencies]
version-sync = "0.9.2"
